--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
 #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 #        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sangeeth-swivel_hilltop-hotel
 
-  scans:
+  scan:
     needs: tests
     name: Build and analyze
     runs-on: ubuntu-latest
