--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,4 +101,4 @@ jobs:
           environment_name: Hilltop-hotel-service-env
           version_label: '${{github.SHA}}'
           region: eu-north-1
-          deployment_package: hilltop-hotel-0.0.1-SNAPSHOT
+          deployment_package: hilltop-hotel-0.0.1-SNAPSHOT.jar
