--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 spring.application.name=hilltop-hotel-service
-#spring.datasource.url= ${DB_URL:jdbc:mysql://localhost:3306/hilltop_hotel?createDatabaseIfNotExist=true}
-#spring.datasource.username= ${DB_USERNAME:root}
-#spring.datasource.password= ${DB_PASSWORD:Dev@#$123}
-#server.port=5002
+server.servlet.context-path=/hilltop-hotel-service/
+server.port=5000
 spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
 spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
-server.port=5000
 eureka.client.serviceUrl.defaultZone=http://hilltop-discovery-service.eu-north-1.elasticbeanstalk.com/eureka
-#eureka.client.serviceUrl.defaultZone=http://localhost:5005/eureka
 eureka.client.instance.preferIpAddress:true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.jpa.hibernate.ddl-auto=update
-
